--- a/package.json
+++ b/package.json
@@ -9,18 +9,59 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "@hookform/resolvers": "^3.9.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@react-email/components": "^0.0.22",
+    "@types/next": "^9.0.0",
+    "@types/next-auth": "^3.15.0",
+    "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "express-rate-limit": "^5.5.1",
+    "i18next": "^23.15.2",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.429.0",
+    "mongodb": "^5.9.2",
+    "mongoose": "^8.5.3",
+    "next": "^14.2.14",
+    "next-auth": "^4.24.8",
+    "next-i18next": "^15.3.1",
+    "nodemailer": "^6.9.14",
+    "phosphor-react": "^1.4.1",
+    "punycode": "^2.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-email": "^1.10.1",
+    "react-hook-form": "^7.52.2",
+    "react-i18next": "^15.0.2",
+    "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.2.2",
+    "usehooks-ts": "^3.1.0",
+    "uuid": "^10.0.0",
+    "winston": "^3.14.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.16.0",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5.5.4"
   }
 }
