--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "lucide-react": "^0.429.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.5.3",
+    "negotiator": "^0.6.3",
     "next": "^14.2.14",
     "next-auth": "^4.24.8",
     "next-i18next": "^15.3.1",
+    "next-intl": "^3.20.0",
     "nodemailer": "^6.9.14",
     "phosphor-react": "^1.4.1",
     "punycode": "^2.3.1",
